[gd_scene load_steps=16 format=3 uid="uid://dfoaaqydn6rhb"]

[ext_resource type="Script" path="res://scripts/plane_2d.gd" id="1_mrkph"]
[ext_resource type="ArrayMesh" uid="uid://dry3um5mv3hvb" path="res://assets/models/all/Plane.res" id="2_kahex"]
[ext_resource type="Script" path="res://scripts/utils/remote_transform_2d_to_3d.gd" id="2_obrjo"]
[ext_resource type="ArrayMesh" uid="uid://bnb37065ovdrd" path="res://assets/models/all/PlaneRed.res" id="3_2b18o"]
[ext_resource type="ArrayMesh" uid="uid://cwo7mwj2biodh" path="res://assets/models/all/PlaneBlackWhite.res" id="4_ln1at"]
[ext_resource type="ArrayMesh" uid="uid://d4fen1yp5t0kn" path="res://assets/models/all/PlaneGreen.res" id="5_65r7t"]
[ext_resource type="ArrayMesh" uid="uid://c21ebwok6womi" path="res://assets/models/all/PlaneSky.res" id="6_xk1wp"]
[ext_resource type="Texture2D" uid="uid://da0uv6a1fj1w8" path="res://resources/materials/line_texture.tres" id="7_2k32o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w2wh5"]
radius = 26.0
height = 236.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dw86g"]
radius = 23.0
height = 178.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6fxer"]
radius = 123.102

[sub_resource type="Curve" id="Curve_8gurb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.188192, 0.871775), 0.0, 0.0, 0, 0, Vector2(0.420664, 1), 0.0, 0.0, 0, 0, Vector2(0.697417, 0.753414), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Animation" id="Animation_6fpnw"]
resource_name = "shielding"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield4:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 18.8496]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12.5664, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shield:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_m6l2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield4:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shield3:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shield2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shield:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m7d3t"]
_data = {
"RESET": SubResource("Animation_m6l2k"),
"shielding": SubResource("Animation_6fpnw")
}

[node name="PlayerPlane" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 129
script = ExtResource("1_mrkph")
meshes_by_type = Array[ArrayMesh]([ExtResource("2_kahex"), ExtResource("3_2b18o"), ExtResource("4_ln1at"), ExtResource("5_65r7t"), ExtResource("6_xk1wp")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(23, 0)
shape = SubResource("CapsuleShape2D_w2wh5")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dw86g")

[node name="HitBoxArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(23, 0)
shape = SubResource("CapsuleShape2D_w2wh5")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBoxArea"]
position = Vector2(-20, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dw86g")

[node name="ShieldShape" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
rotation = 1.5708
shape = SubResource("CircleShape2D_6fxer")

[node name="Shield" type="Line2D" parent="ShieldShape"]
points = PackedVector2Array(54.0004, 109, 87.0003, 86.9997, 114, 46.9996, 121, -1.00044, 114, -42.0004, 104, -58.0004, 94.9997, -75.0004, 50.9996, -113, 3.99955, -124, -36.0004, -114, -53.0004, -103, -80.0003, -91.9997, -112, -47.9996, -122, 0.000441551, -117, 39.0004, -90.9997, 79.0003, -65.9996, 96.0002, -53.9996, 110, 0.000438035, 121)
closed = true
width = 6.0
width_curve = SubResource("Curve_8gurb")
texture = ExtResource("7_2k32o")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="Shield2" type="Line2D" parent="ShieldShape"]
points = PackedVector2Array(66, 88, 82, 79, 95.0002, 60.9997)
width = 6.0
width_curve = SubResource("Curve_8gurb")
texture = ExtResource("7_2k32o")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="Shield3" type="Line2D" parent="ShieldShape"]
points = PackedVector2Array(-37.0004, -96.9999, -26.0004, -102, -17.0004, -98.9999)
width = 6.0
width_curve = SubResource("Curve_8gurb")
texture = ExtResource("7_2k32o")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="Shield4" type="Line2D" parent="ShieldShape"]
points = PackedVector2Array(99.9998, -55.0004, 97.9998, -65.0004, 87.9997, -74.0003)
width = 6.0
width_curve = SubResource("Curve_8gurb")
texture = ExtResource("7_2k32o")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 4

[node name="ShieldAnimationPlayer" type="AnimationPlayer" parent="ShieldShape"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_m7d3t")
}
speed_scale = 0.2

[node name="RemoteTransform2DTo3D" type="Node2D" parent="." node_paths=PackedStringArray("_target_3d")]
unique_name_in_owner = true
process_mode = 1
script = ExtResource("2_obrjo")
_target_3d = NodePath("../3D")
y_offset = 0.13

[node name="3D" type="Node3D" parent="."]
unique_name_in_owner = true
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0)
top_level = true

[node name="Plane" type="MeshInstance3D" parent="3D"]
unique_name_in_owner = true
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.00770745, 0)
mesh = ExtResource("2_kahex")
skeleton = NodePath("")

[node name="HandPose" type="Marker3D" parent="3D"]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, -1, -8.74228e-08, -1, -4.37114e-08, -0.0411475, 0.0228266, 0.049329)

[node name="WeaponPositions" type="Node3D" parent="3D"]

[node name="Weapon1" type="Marker3D" parent="3D/WeaponPositions"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0197434, 0.044, 0.065)
gizmo_extents = 0.05

[node name="Weapon2" type="Marker3D" parent="3D/WeaponPositions"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0197653, 0.0436851, 0)
gizmo_extents = 0.05

[node name="Weapon3" type="Marker3D" parent="3D/WeaponPositions"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0197434, 0.044, -0.065)
gizmo_extents = 0.05
